<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Scrollable content area -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newGameDialogButtons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <!-- Board Size -->
            <TextView
                android:text="@string/newGameDialogBoardSizeLabel"
                style="@style/TextDialogEntry"/>
            <Spinner
                android:id="@+id/newGameDialogBoardSizeSpinner"
                style="@style/SpinnerDialogEntry"
                android:entries="@array/newGameDialogBoardSizeListWievItems"
                android:prompt="@string/newGameDialogBoardSizeLabel"/>

            <!-- Handicap -->
            <TextView
                android:text="@string/newGameDialogHandicapLabel"
                style="@style/TextDialogEntry"/>
            <Spinner
                android:id="@+id/newGameDialogHandicapSpinner"
                style="@style/SpinnerDialogEntry"
                android:entries="@array/newGameDialogHandicapListWievItems"
                android:prompt="@string/newGameDialogHandicapLabel"/>

            <!-- Human Plays -->
            <TextView
                android:text="@string/newGameDialogHumanPlaysLabelText"
                style="@style/TextDialogEntry"/>
            <Spinner
                android:id="@+id/newGameDialogHumanPlaysSpinner"
                style="@style/SpinnerDialogEntry"
                android:entries="@array/newGameDialogHumanPlaysItems"
                android:prompt="@string/newGameDialogHumanPlaysLabelText"/>

            <!-- Strength -->
            <TextView
                android:text="@string/newGameDialogStrengthLabel"
                style="@style/TextDialogEntry"/>
            <Spinner
                android:id="@+id/newGameDialogStrengthSpinner"
                style="@style/SpinnerDialogEntry"
                android:entries="@array/newGameDialogStrengthItems"
                android:prompt="@string/newGameDialogStrengthLabel"/>

            <!-- Komi -->
            <TextView
                android:text="@string/newGameDialogKomiLabel"
                style="@style/TextDialogEntry"/>
            <Spinner
                android:id="@+id/newGameDialogKomiSpinner"
                style="@style/SpinnerDialogEntry"
                android:entries="@array/newGameDialogKomiItems"
                android:prompt="@string/newGameDialogKomiLabel"/>

            <!-- Scoring -->
            <TextView
                android:text="@string/newGameDialogScoringLabel"
                style="@style/TextDialogEntry"/>
            <Spinner
                android:id="@+id/newGameDialogScoringSpinner"
                style="@style/SpinnerDialogEntry"
                android:entries="@array/newGameDialogScoringItems"
                android:prompt="@string/newGameDialogScoringLabel"/>

			<!-- Allow Resignation -->
			<TextView
				android:text="@string/newGameAllowResignationLabel"
				style="@style/TextDialogEntry"/>

			<CheckBox
				android:id="@+id/newGameDialogAllowResignCheckBox"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"/>


        </LinearLayout>
    </ScrollView>

    <!-- Bottom buttons -->
    <LinearLayout
        android:id="@+id/newGameDialogButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/newGameDialogApplyButton"
            style="@style/WrapContent"
            android:text="@string/newGameDialogApplytButtonText"
            android:enabled="false"/>

        <Button
            android:id="@+id/newGameDialogStartButton"
            style="@style/WrapContent"
            android:text="@string/newGameDialogStartButtonText"/>
    </LinearLayout>

</RelativeLayout>
