<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:fitsSystemWindows="true">
	
		<ImageView
			android:id="@+id/topArtImage"
			android:layout_width="match_parent"
			android:layout_height="150dp" 
			android:scaleType="centerCrop"
			android:src="@drawable/painting"
			android:contentDescription="@string/app_name"/>
	

    <!-- Top panel with score and menu -->
    <com.samthegliderpilot.godroid.ScoreView
        android:id="@+id/scoreView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:maxHeight="150dp"
        android:layout_alignParentTop="true">

        <!-- Menu button -->
        <ImageView
            android:id="@+id/MenuButton"
            style="@style/MenuButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <!-- Score table -->
        <TableLayout
            style="@style/WrapContent"
            android:layout_centerInParent="true"
            android:padding="@dimen/scoreViewTextPadding"
            android:stretchColumns="1,2"
            android:shrinkColumns="0">

            <TableRow>
                <TextView
                    android:id="@+id/blackColorTextView"
                    android:text="@string/blackColorText"
                    android:layout_column="1"
                    style="@style/TableLayoutTextCentered"/>
                <TextView
                    android:id="@+id/whiteColorTextView"
                    android:text="@string/whiteColorText"
                    style="@style/TableLayoutTextCentered"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/capturesRowTextView"
                    android:text="@string/capturesLabelText"
                    style="@style/TableLayoutText"/>
                <TextView
                    android:id="@+id/blackCapturesTextView"
                    style="@style/TableLayoutTextCentered"/>
                <TextView
                    android:id="@+id/whiteCapturesTextView"
                    style="@style/TableLayoutTextCentered"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/moveRowTextView"
                    android:text="@string/moveLabelText"
                    style="@style/TableLayoutText"/>
                <include
                    layout="@layout/move_cell"
                    android:id="@+id/blackMoveCell"/>
                <include
                    layout="@layout/move_cell"
                    android:id="@+id/whiteMoveCell"/>
            </TableRow>

            <TableRow
                android:id="@+id/scoreTableRow">
                <TextView
                    android:id="@+id/scoreRowTextView"
                    android:text="@string/scoreLabelText"
                    style="@style/TableLayoutText"/>
                <TextView
                    android:id="@+id/blackScoreTextView"
                    style="@style/TableLayoutTextCentered"/>
                <TextView
                    android:id="@+id/whiteScoreTextView"
                    style="@style/TableLayoutTextCentered"/>
            </TableRow>

            <TableRow
                android:id="@+id/messageTableRow"
                android:visibility="gone">
                <TextView
                    android:id="@+id/messageScoreTextView"
                    android:layout_span="3"
                    style="@style/TableLayoutTextCentered"/>
            </TableRow>


        </TableLayout>
    </com.samthegliderpilot.godroid.ScoreView>

    <!-- Go board fills the rest of the screen -->
<com.samthegliderpilot.godroid.BoardView
    android:id="@+id/boardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/scoreView"
    android:layout_alignParentBottom="true" />

</RelativeLayout>
